objectbox/lib/src/bindings/objectbox-c.dart


  /// /// FB ID slot must be present in the given data; new entities must have an ID value of zero or OBX_ID_NEW
  /// /// @param data writable data buffer, which may be updated for the ID
  /// /// @returns 0 on error, e.g. the entity was not put according to OBXPutMode
  int box_put_object4(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.Void> data,
    int size,
    int mode,
  ) {
    _box_put_object4 ??=
        _dylib.lookupFunction<_c_box_put_object4, _dart_box_put_object4>(
            'obx_box_put_object4');
    return _box_put_object4(
      box,
      data,
      size,
      mode,
    );
  }

  _dart_box_put_object4 _box_put_object4;

  /// /// Put all given objects in the database in a single transaction. If any of the individual objects failed to put,
  /// /// none are put and an error is returned, equivalent to calling obx_box_put_many5() with fail_on_id_failure=true.
  /// /// @param ids Previously allocated IDs for the given given objects (e.g. using obx_box_ids_for_put)
  int box_put_many(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_bytes_array> objects,
    ffi.Pointer<ffi.Uint64> ids,
    int mode,
  ) {
    _box_put_many ??=
        _dylib.lookupFunction<_c_box_put_many, _dart_box_put_many>(
            'obx_box_put_many');
    return _box_put_many(
      box,
      objects,
      ids,
      mode,
    );
  }

  _dart_box_put_many _box_put_many;

  /// /// Like obx_box_put_many(), but with an additional flag indicating how to treat ID failures with OBXPutMode_INSERT and
  /// /// OBXPutMode_UPDATE.
  /// /// @param fail_on_id_failure if set to true, an ID failure (OBX_ERROR_ID_ALREADY_EXISTS and OBX_ERROR_ID_NOT_FOUND)
  /// ///        will fail the transaction, and none of the objects are put/inserted/updated.
  /// /// Note 1: If this function is run inside a managed TX (created by obx_txn_write()) with fail_on_id_failure=true and
  /// ///         a failure occurs, the whole outer TX is also aborted.
  /// /// Note 2: ID failure errors are returned even if fail_on_id_failure=false and the TX wasn't aborted.
  int box_put_many5(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_bytes_array> objects,
    ffi.Pointer<ffi.Uint64> ids,
    int mode,
    bool fail_on_id_failure,
  ) {
    _box_put_many5 ??=
        _dylib.lookupFunction<_c_box_put_many5, _dart_box_put_many5>(
            'obx_box_put_many5');
    return _box_put_many5(
      box,
      objects,
      ids,
      mode,
      fail_on_id_failure ? 1 : 0,
    );
  }

  _dart_box_put_many5 _box_put_many5;

  /// /// Remove a single object
  /// /// will return OBX_NOT_FOUND if an object with the given ID doesn't exist
  int box_remove(
    ffi.Pointer<OBX_box> box,
    int id,
  ) {
    _box_remove ??= _dylib
        .lookupFunction<_c_box_remove, _dart_box_remove>('obx_box_remove');
    return _box_remove(
      box,
      id,
    );
  }

  _dart_box_remove _box_remove;

  /// /// Remove all given objects from the database in a single transaction.
  /// /// Note that this method will not fail if the object is not found (e.g. already removed).
  /// /// In case you need to strictly check whether all of the objects exist before removing them,
  /// /// execute obx_box_contains_ids() and obx_box_remove_ids() inside a single write transaction.
  /// /// @param out_count Pointer to retrieve the number of removed objects; optional: may be NULL.
  int box_remove_many(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_id_array> ids,
    ffi.Pointer<ffi.Uint64> out_count,
  ) {
    _box_remove_many ??=
        _dylib.lookupFunction<_c_box_remove_many, _dart_box_remove_many>(
            'obx_box_remove_many');
    return _box_remove_many(
      box,
      ids,
      out_count,
    );
  }

  _dart_box_remove_many _box_remove_many;

  /// /// Remove all objects and set the out_count the the number of removed objects.
  /// /// @param out_count Pointer to retrieve the number of removed objects; optional: may be NULL.
  int box_remove_all(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.Uint64> out_count,
  ) {
    _box_remove_all ??=
        _dylib.lookupFunction<_c_box_remove_all, _dart_box_remove_all>(
            'obx_box_remove_all');
    return _box_remove_all(
      box,
      out_count,
    );
  }

  _dart_box_remove_all _box_remove_all;

  /// /// Check whether there are any objects for this entity and updates the out_is_empty accordingly
  int box_is_empty(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.Uint8> out_is_empty,
  ) {
    _box_is_empty ??=
        _dylib.lookupFunction<_c_box_is_empty, _dart_box_is_empty>(
            'obx_box_is_empty');
    return _box_is_empty(
      box,
      out_is_empty,
    );
  }

  _dart_box_is_empty _box_is_empty;

  /// /// Count the number of objects in the box, up to the given maximum.
  /// /// You can pass limit=0 to count all objects without any limitation.
  int box_count(
    ffi.Pointer<OBX_box> box,
    int limit,
    ffi.Pointer<ffi.Uint64> out_count,
  ) {
    _box_count ??=
        _dylib.lookupFunction<_c_box_count, _dart_box_count>('obx_box_count');
    return _box_count(
      box,
      limit,
      out_count,
    );
  }

  _dart_box_count _box_count;

  /// /// Fetch IDs of all objects that link back to the given object (ID) using the given relation property (ID).
  /// /// Note: This method refers to "property based relations" unlike the "stand-alone relations" (see obx_box_rel_*).
  /// /// @param property_id the relation property, which must belong to the entity type represented by this box
  /// /// @param id object ID; the object's type is the target of the relation property (typically from another Box)
  /// /// @returns resulting IDs representing objects in this Box, or NULL in case of an error
  ffi.Pointer<OBX_id_array> box_get_backlink_ids(
    ffi.Pointer<OBX_box> box,
    int property_id,
    int id,
  ) {
    _box_get_backlink_ids ??= _dylib.lookupFunction<_c_box_get_backlink_ids,
        _dart_box_get_backlink_ids>('obx_box_get_backlink_ids');
    return _box_get_backlink_ids(
      box,
      property_id,
      id,
    );
  }

  _dart_box_get_backlink_ids _box_get_backlink_ids;

  /// /// Insert a standalone relation entry between two objects.
  /// /// @param relation_id must be a standalone relation ID with source entity belonging to this box
  /// /// @param source_id identifies an object from this box
  /// /// @param target_id identifies an object from the target box (as per the relation definition)
  int box_rel_put(
    ffi.Pointer<OBX_box> box,
    int relation_id,
    int source_id,
    int target_id,
  ) {
    _box_rel_put ??= _dylib
        .lookupFunction<_c_box_rel_put, _dart_box_rel_put>('obx_box_rel_put');
    return _box_rel_put(
      box,
      relation_id,
      source_id,
      target_id,
    );
  }

  _dart_box_rel_put _box_rel_put;

  /// /// Remove a standalone relation entry between two objects.
  /// /// See obx_box_rel_put() for parameters documentation.
  int box_rel_remove(
    ffi.Pointer<OBX_box> box,
    int relation_id,
    int source_id,
    int target_id,
  ) {
    _box_rel_remove ??=
        _dylib.lookupFunction<_c_box_rel_remove, _dart_box_rel_remove>(
            'obx_box_rel_remove');
    return _box_rel_remove(
      box,
      relation_id,
      source_id,
      target_id,
    );
  }

  _dart_box_rel_remove _box_rel_remove;

  /// /// Fetch IDs of all objects in this Box related to the given object (typically from another Box).
  /// /// Used for a stand-alone relation and its "regular" direction; this Box represents the target of the relation.
  /// /// @param relation_id ID of a standalone relation, whose target type matches this Box
  /// /// @param id object ID of the relation source type (typically from another Box)
  /// /// @returns resulting IDs representing objects in this Box, or NULL in case of an error
  ffi.Pointer<OBX_id_array> box_rel_get_ids(
    ffi.Pointer<OBX_box> box,
    int relation_id,
    int id,
  ) {
    _box_rel_get_ids ??=
        _dylib.lookupFunction<_c_box_rel_get_ids, _dart_box_rel_get_ids>(
            'obx_box_rel_get_ids');
    return _box_rel_get_ids(
      box,
      relation_id,
      id,
    );
  }

  _dart_box_rel_get_ids _box_rel_get_ids;

  /// /// Fetch IDs of all objects in this Box related to the given object (typically from another Box).
  /// /// Used for a stand-alone relation and its "backlink" direction; this Box represents the source of the relation.
  /// /// @param relation_id ID of a standalone relation, whose source type matches this Box
  /// /// @param id object ID of the relation target type (typically from another Box)
  /// /// @returns resulting IDs representing objects in this Box, or NULL in case of an error
  ffi.Pointer<OBX_id_array> box_rel_get_backlink_ids(
    ffi.Pointer<OBX_box> box,
    int relation_id,
    int id,
  ) {
    _box_rel_get_backlink_ids ??= _dylib.lookupFunction<
        _c_box_rel_get_backlink_ids,
        _dart_box_rel_get_backlink_ids>('obx_box_rel_get_backlink_ids');
    return _box_rel_get_backlink_ids(
      box,
      relation_id,
      id,
    );
  }

  _dart_box_rel_get_backlink_ids _box_rel_get_backlink_ids;

  /// /// Time series: get the limits (min/max time values) over all objects
  /// /// @param out_min_id pointer to receive an output (may be NULL)
  /// /// @param out_min_value pointer to receive an output (may be NULL)
  /// /// @param out_max_id pointer to receive an output (may be NULL)
  /// /// @param out_max_value pointer to receive an output (may be NULL)
  /// /// @returns OBX_NOT_FOUND if no objects are stored
  int box_ts_min_max(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.Uint64> out_min_id,
    ffi.Pointer<ffi.Int64> out_min_value,
    ffi.Pointer<ffi.Uint64> out_max_id,
    ffi.Pointer<ffi.Int64> out_max_value,
  ) {
    _box_ts_min_max ??=
        _dylib.lookupFunction<_c_box_ts_min_max, _dart_box_ts_min_max>(
            'obx_box_ts_min_max');
    return _box_ts_min_max(
      box,
      out_min_id,
      out_min_value,
      out_max_id,
      out_max_value,
    );
  }

  _dart_box_ts_min_max _box_ts_min_max;

  /// /// Time series: get the limits (min/max time values) over objects within the given time range
  /// /// @param out_min_id pointer to receive an output (may be NULL)
  /// /// @param out_min_value pointer to receive an output (may be NULL)
  /// /// @param out_max_id pointer to receive an output (may be NULL)
  /// /// @param out_max_value pointer to receive an output (may be NULL)
  /// /// @returns OBX_NOT_FOUND if no objects are stored in the given range
  int box_ts_min_max_range(
    ffi.Pointer<OBX_box> box,
    int range_begin,
    int range_end,
    ffi.Pointer<ffi.Uint64> out_min_id,
    ffi.Pointer<ffi.Int64> out_min_value,
    ffi.Pointer<ffi.Uint64> out_max_id,
    ffi.Pointer<ffi.Int64> out_max_value,
  ) {
    _box_ts_min_max_range ??= _dylib.lookupFunction<_c_box_ts_min_max_range,
        _dart_box_ts_min_max_range>('obx_box_ts_min_max_range');
    return _box_ts_min_max_range(
      box,
      range_begin,
      range_end,
      out_min_id,
      out_min_value,
      out_max_id,
      out_max_value,
    );
  }

  _dart_box_ts_min_max_range _box_ts_min_max_range;

  /// /// Note: DO NOT close this OBX_async; its lifetime is tied to the OBX_box instance.
  ffi.Pointer<OBX_async> async_1(
    ffi.Pointer<OBX_box> box,
  ) {
    _async_1 ??= _dylib.lookupFunction<_c_async_1, _dart_async_1>('obx_async');
    return _async_1(
      box,
    );
  }

  _dart_async_1 _async_1;

  /// /// Put asynchronously with standard put semantics (insert or update).
  int async_put(
    ffi.Pointer<OBX_async> async_1,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _async_put ??=
        _dylib.lookupFunction<_c_async_put, _dart_async_put>('obx_async_put');
    return _async_put(
      async_1,
      id,
      data,
      size,
    );
  }

  _dart_async_put _async_put;
